<resources>
    <!-- App base strings -->
    <string name="app_name">Games Inside Your Pocket</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Navigation Itens -->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_consoles">Consoles</string>
    <string name="navigation_item_games">Games</string>
    <string name="navigation_item_favourites">Favorites</string>
    <string name="navigation_item_menu_subtitle">Others</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_exit">Exit</string>
</resources>
