<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/navigation_item_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/consoles"
            android:title="@string/navigation_item_consoles"
            android:icon="@drawable/ic_games"/>

        <item
            android:id="@+id/games"
            android:title="@string/navigation_item_games"
            android:icon="@drawable/ic_game"/>

        <item
            android:id="@+id/favourites"
            android:title="@string/navigation_item_favourites"
            android:icon="@drawable/ic_favorite"/>
    </group>


    <item android:title="@string/navigation_item_menu_subtitle">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/settings"
                    android:title="@string/navigation_item_settings"
                    android:icon="@drawable/ic_settings"/>


                <item
                    android:id="@+id/exit"
                    android:title="@string/navigation_item_exit"
                    android:icon="@drawable/ic_exit"/>
            </group>
        </menu>
    </item>

</menu>